--- a/static/index.html
+++ b/static/index.html
@@ -29,15 +29,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">アロママッサージ店</a>
+          <a class="navbar-brand" href="#"><img src="images/logo_tangerine.svg" width="20" alt=""></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#COURSE">コース紹介</a></li>
-            <li><a href="#THERAPIST">セラピスト紹介</a></li>
-            <li><a href="#RESERVE">予約</a></li>
-            <li><a href="#ACCESS">アクセス</a></li>
+            <li><a href="#BODYCARE">bodycare</a></li>
+            <li><a href="#TREATMENT">aroma-treatment</a></li>
+            <li><a href="#FACIAL">facial-massage</a></li>
+            <li><a href="#THERAPIST">memo/profile</a></li>
+            <li><a href="#ACCESS">access</a></li>
+            <li><a href="#RESERVE">reservation</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" class="icon-facebook"></a></li>
@@ -50,21 +52,18 @@
       </div>
     </nav>
 
-
-
-
     <header data-speed="0" data-type="background">
     <div class="overlay"></div>
     <div class="centralized">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2" id="welcome_content">
-          <figure class="glyphicon glyphicon-heart-empty"><img src="" alt=""></figure>
-          <h1>アロママッサージ店</h1>
-          <p class="hishi">◆</p>
-          <p class="text">アロマトリートメントとボディケアのお店「」にようこそ。<br>
-「」は１日ひと組のお客様をお迎えするプライベートサロンです。<br>
-お客様ひとりひとりにそれぞれの極上のリラクゼーションをご提供します。</p>
+          <figure><img src="images/logo_mark.svg" alt=""></figure>
+          <h1><img src="images/url.svg" alt=""></h1>
+          <p class="text">アロマトリートメントとボディケアのお店<br>
+            「TANGERINE(タンジェリン)」へようこそ。<br>
+            TANGERINEは1日ひと組のお客様をお迎えするプライベートサロンです。<br>
+            お客様ひとりひとりにそれぞれの極上のリラクゼーションをご提供します。</p>
           <p class="sns">
           <a href="#" class="icon-facebook"></a>
           <a href="#" class="icon-twitter"></a>
@@ -77,7 +76,14 @@
     </div>
     </div>
     </header>
-    <section id="COURSE">
+
+    <section id="BODYCARE">
+      <h1>BODY CARE</h1>
+
+      
+    </section>
+
+    <section id="MENU">
       <h1>
       <div class="container">コース紹介</div>
       </h1>
@@ -112,7 +118,7 @@
                   </tr>
                   <tr>
                     <td>120分</td>
-                    <td>&yen; 10,500</td>
+                    <td>&yen; 10,000</td>
                   </tr>
                 </tbody>
               </table>
@@ -129,7 +135,7 @@
             </div>
             <div class="col-md-8">
               <h3>フットバスで体の準備を</h3>
-              <p>施術前のフットバスで血液の巡りを良くします。</p>
+              <p>施術前にエッセンシャルオイルをブレンドしたフットバスで体を暖め、血行を促進します。</p>
             </div>
           </div>
           <div class="row">
@@ -342,26 +348,6 @@
     </div>
     </div>
     </section>
-    <section id="RESERVE">
-    <h1>
-    <div class="container">予約</div>
-    </h1>
-    <div class="container">
-    <div id='calendar'></div>
-    <dl>
-      <dt>ご予約</dt>
-      <dd>予約優先・当日予約可</dd>
-      <dd>変更やキャンセルは前日の夕方までにご連絡をお願いします。</dd>
-      <dd>(ご予約の前日が定休日の場合は、定休日の前日までにご連絡をお願いします)</dd>
-      <dt>ご注意</dt>
-      <dd>10分以上遅刻される場合には、コース変更をお願いする場合があります。</dd>
-      <dd>ご連絡のないキャンセルに対してはキャンセル料をいただく場合がございます。</dd>
-      <dd>ご希望に添えずお断りしてしまっている方々が多くいらっしゃるため、当日キャンセルが重なるお客様（3回以上）については、先に施術代をお振込みいただき、その時点で予約確定となりますので、ご了承くださいませ。 </dd>
-      <dd>以下の症状がある場合には、お手入れをご遠慮くださいますようお願いします。</dd>
-      <dd>（重い高血圧・妊娠中・発熱症状・静脈瘤・水虫）</dd>
-    </dl>
-    </div>
-    </section>
     <section id="ACCESS">
       <h1>
       <div class="container">アクセス</div>
@@ -383,6 +369,26 @@
         </div>
       </div>
       </div>
+    </section>
+    <section id="RESERVE">
+    <h1>
+    <div class="container">予約</div>
+    </h1>
+    <div class="container">
+    <div id='calendar'></div>
+    <dl>
+      <dt>ご予約</dt>
+      <dd>予約優先・当日予約可</dd>
+      <dd>変更やキャンセルは前日の夕方までにご連絡をお願いします。</dd>
+      <dd>(ご予約の前日が定休日の場合は、定休日の前日までにご連絡をお願いします)</dd>
+      <dt>ご注意</dt>
+      <dd>10分以上遅刻される場合には、コース変更をお願いする場合があります。</dd>
+      <dd>ご連絡のないキャンセルに対してはキャンセル料をいただく場合がございます。</dd>
+      <dd>ご希望に添えずお断りしてしまっている方々が多くいらっしゃるため、当日キャンセルが重なるお客様（3回以上）については、先に施術代をお振込みいただき、その時点で予約確定となりますので、ご了承くださいませ。 </dd>
+      <dd>以下の症状がある場合には、お手入れをご遠慮くださいますようお願いします。</dd>
+      <dd>（重い高血圧・妊娠中・発熱症状・静脈瘤・水虫）</dd>
+    </dl>
+    </div>
     </section>
     <footer>
     <div class="container">
@@ -414,7 +420,7 @@
             <textarea class="form-control" rows="3" id="inputDetail"></textarea>
           </div>
         </div>
-        
+
         <div class="form-group">
           <div class="col-lg-offset-3 col-lg-9">
             <button type="submit" class="btn btn-default">送信</button>
