--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>アロママッサージのお店 TANGERINE</title>
-    <meta content="アロマ,アロママッサージ,マッサージ" name="keywords">
+    <meta content="アロマ,アロママッサージ,マッサージ,ダイエット,リラクゼーション,松戸,常磐線,新京成線" name="keywords">
     <meta content="アロマトリートメントとボディケアのお店「TANGERINE(タンジェリン)」へようこそ。TANGERINEは1日ひと組のお客様をお迎えするプライベートサロンです。お客様ひとりひとりにそれぞれの極上のリラクゼーションをご提供します。" name="description">
     <meta property="og:title" content="アロママッサージのお店 TANGERINE">
     <meta property="og:type" content="salon">
@@ -13,6 +13,8 @@
     <meta property="og:image" content="http://aroma-massage.appspot.com/images/ogimage.png">
     <meta property="og:site_name" content="TANGERINE">
     <meta property="og:email" content="info@facebookapps.jp">
+    <meta name=”keywords” content=”アロマ,アロママッサージ,マッサージ,ダイエット,リラクゼーション,松戸,常磐線,新京成線”>
+    <meta name=”description” content=”アロマトリートメントとボディケアのお店「TANGERINE(タンジェリン)」へようこそ。TANGERINEは1日ひと組のお客様をお迎えするプライベートサロンです。”>
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72-precomposed.png">
@@ -45,14 +47,13 @@
             <li><a href="#TREATMENT">AROMA-TREATMENT</a></li>
             <li><a href="#FACIAL">FACIAL MASSAGE</a></li>
             <li><a href="#THERAPIST">MEMO/PROFILE</a></li>
+            <li><a href="#RESERVE">RESERVE</a></li>
             <li><a href="#ACCESS">ACCESS</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" class="icon-facebook"></a></li>
+            <li><a href="https://www.facebook.com/pages/Salon_Tangerine/1443519525940178" target="_blank" class="icon-facebook"></a></li>
             <li><a href="http://twitter.com/share?url=http://aroma-massage.appspot.com/&text=ツイート内に含める文字&via=ツイート内に含まれるユーザー名&related=関連アカウント" class="icon-twitter"></a></li>
-            <li><a href="#" class="icon-google-plus"></a></li>
-            <li><a href="#" class="icon-pinterest"></a></li>
-            <li><a href="#" class="icon-tumblr"></a></li>
+            <li><a href="https://www.google.com/+AromamassageAppspotTangerine" target="_blank" class="icon-google-plus"></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
@@ -60,7 +61,7 @@
 
     <header data-speed="0" data-type="background">
     <div class="overlay"></div>
-    <div class="centralized">
+    <div class="">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2" id="welcome_content">
@@ -71,11 +72,9 @@
             TANGERINEは1日ひと組のお客様をお迎えするプライベートサロンです。<br>
             お客様ひとりひとりにそれぞれの極上のリラクゼーションをご提供します。</p>
           <p class="sns">
-          <a href="#" class="icon-facebook"></a>
+          <a href="https://www.facebook.com/pages/Salon_Tangerine/1443519525940178" target="_blank" class="icon-facebook"></a>
           <a href="http://twitter.com/share?url=http://aroma-massage.appspot.com/&text=ツイート内に含める文字&via=ツイート内に含まれるユーザー名&related=関連アカウント" class="icon-twitter"></a>
-          <a href="#" class="icon-google-plus"></a>
-          <a href="#" class="icon-pinterest"></a>
-          <a href="#" class="icon-tumblr"></a>
+          <a href="https://www.google.com/+AromamassageAppspotTangerine" target="_blank" class="icon-google-plus"></a>
           </p>
         </div>
       </div>
@@ -89,11 +88,11 @@
     <section id="BODYCARE">
       <h1>BODY CARE</h1>
       <div class="row">
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h2><img src="images/icon_b.svg" alt="">ボディケア(着衣のマッサージ)</h2>
           <p>肩こり、腰痛、頭痛、眼精疲労のある方、身体の固い方、歪みのある方、倦怠感のある方におすすめです。</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-sm-4">
           <table class="table table-hover table-condensed">
             <thead>
               <tr>
@@ -115,23 +114,23 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/025.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h3>フットバスで体の準備を</h3>
           <p>施術前にエッセンシャルオイルをブレンドしたフットバスで体を暖め、血行を促進します。</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/massage.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h3>全身を丁寧にマッサーシ</h3>
           <p>着衣での全身マッサージです。お気に入りのゆったりしたお着替えがあればご持参してください。 指圧マッサージを施す事により血行が促進され、筋肉の凝りをほぐしていきます。</p>
           <h3>ストレッチで</h3>
@@ -139,13 +138,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/047.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
-          <h3>ハーブティを飲んでリラックズ</h3>
+        <div class="col-sm-8">
+          <h3>ハーブティを飲んでリラックス</h3>
           <p>施術前後にお茶をご用意します。ごゆっくりおくつろぎください。</p>
         </div>
       </div>
@@ -156,11 +155,11 @@
     <section id="TREATMENT">
       <h1>AROMA-TREATMENT</h1>
       <div class="row">
-        <div class="col-xs-8">
-          <h2><img src="images/icon_b.svg" alt="">アロマトリートメント(全身)</h2>
+        <div class="col-sm-8">
+          <h2><img src="images/icon_a.svg" alt="">アロマトリートメント(全身)</h2>
           <p>むくみ、冷え、婦人科系不調、ストレスのある方、リラクゼーションを求める方におすすめです。</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-sm-4">
           <table class="table table-hover table-condensed">
             <thead>
               <tr>
@@ -182,47 +181,47 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/025.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h3>フットバスで体の準備を</h3>
           <p>施術前にエッセンシャルオイルをブレンドしたフットバスで体を暖め、血行を促進します。</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/039.png" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h3>お好みのブレンドオイルで全身トリートメント</h3>
           <p>その日の体調と希望をお聞きしてエッセンシャルオイルをブレンドしていきます。</p>
           <p>栄養豊富なキャリアオイルと共に全身をトリートメントすることによって皮膚から浸透するオイルの効能と 鼻腔から入るアロマの香りが脳を刺激し、血行促進から凝りをほぐし、自律神経も整えます。</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/refle.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h3>リフレクソロジーも</h3>
           <p>足裏からふくらはぎにかけても重点的にオイルですべらせながら痛みの少ないフレクソロジーを行います。</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/047.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
-          <h3>ハーブティを飲んでリラックズ</h3>
+        <div class="col-sm-8">
+          <h3>ハーブティを飲んでリラックス</h3>
           <p>施術前後にお茶をご用意します。ごゆっくりおくつろぎください。</p>
         </div>
       </div>
@@ -233,11 +232,11 @@
     <section id="FACIAL">
       <h1>FACIAL MASSAGE</h1>
       <div class="row">
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h2><img src="images/icon_f.svg" alt="">フェイシャルマッサージ</h2>
           <p>お顔のくすみ、シワ、たるみ、シミ、乾燥の気になる方におすすめです。</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-sm-4">
           <table class="table table-hover table-condensed">
             <thead>
               <tr>
@@ -259,36 +258,36 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/033.png" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h3>クレンジング、マッサージ、パックでスペシャルケアを</h3>
           <p>クレンジングミルクでメイクオフし、マッサージ。スチーマーで毛穴を開いて汚れを排出します。</p>
           <p>オイルで顔からデコルテにかけてのエリアをマッサージしお肌のターンオーバーを促し、首や頭の凝りをほぐし健康的な顔色を呼び戻します。クリームパックをしてお肌に栄養を与え保湿をし閉じ込めます。</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/057.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <h3>腕や足もほぐします</h3>
           <p>お顔にパックを施している間に腕や足をもみほぐします。</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/047.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
-          <h3>ハーブティを飲んでリラックズ</h3>
+        <div class="col-sm-8">
+          <h3>ハーブティを飲んてリラックス</h3>
           <p>施術前後にお茶をご用意します。ごゆっくりおくつろぎください。</p>
         </div>
       </div>
@@ -302,12 +301,12 @@
       <h3>モロッコの柑橘類、タンジェリンのエッセンシャルオイルをぜひお試しください。</h3>
 
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/056.jpg" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <p>オイル:モロッコの柑橘類、タンジェリンのエッセンシャルオイルをおすすめしています。</p>
           <p>マッサージオイルにはモロッコ産のアルガンオイルをブレンドし使用しています。</p>
           <p>お子様連れでご来店可能:日曜日のご予約に限り専属のベビーシッターを手配することが出来ます。</p>
@@ -317,12 +316,12 @@
       <h2><img src="images/logo_tangerine.svg" alt="">セラピスト紹介</h2>
       <h3>「日頃お疲れで身体も心も癒しを求めている方に心を込めておもてなしをし、リラックスして頂きたいと思っています。是非一度お越しください。」</h3>
       <div class="row">
-        <div class="col-xs-4">
-          <figure>
+        <div class="col-sm-4">
+          <figure class="mb12">
           <img src="images/image-4.png" alt="" class="img-responsive img-thumbnail">
           </figure>
         </div>
-        <div class="col-xs-8">
+        <div class="col-sm-8">
           <p>井出しょうこ/ 1972 年生まれ</p>
           <p>整体療導師認定講座修了</p>
           <p>日本アロマ環境協会認定</p>
@@ -337,10 +336,18 @@
 
     <p class="line"><img src="images/line1.svg" alt=""></p>
 
+    <section id="RESERVE">
+      <h1>RESERVE</h1>
+      <p class="text-center">下記のボタンより予約ページに進んでください。</p>
+      <p class="text-center"><a href="https://coubic.com/tangerine" class="btn btn-lg btn-primary" target="_blank">予約する</a></p>
+
+    </section>
+
+    <p class="line"><img src="images/line1.svg" alt=""></p>
+
     <section id="ACCESS">
       <h1>ACCESS</h1>
       <h2><img src="images/logo_tangerine.svg" alt="">アクセス</h2>
-      <h3>最寄り駅に着きましたら、下記電話番号もしくは LINE までお問い合わせください。</h3>
 
       <div class="row">
         <div class="col-lg-4">
@@ -352,8 +359,7 @@
         </div>
         <div class="col-lg-8">
           <p>【千葉県松戸市】 最寄駅:新京成線「常盤平」駅 </p>
-          <p>最寄り駅の「常盤平駅」に着きましたら、下記電話番号もしくは LINE までお問い合わせください。折り返しこちらからご連絡差し上げます。</p>
-          <p>電話番号:080-4626-2436</p>
+          <p>最寄り駅の「常盤平駅」に着きましたら LINE までお問い合わせください。折り返しこちらからご連絡差し上げます。</p>
           <p>LINE ID:tangerine_shoko</p>
         </div>
       </div>
@@ -374,37 +380,10 @@
       <div class="col-md-6">
       <h2>Notice</h2>
       <p>当社ウェブサイト及び当社ウェブサイト上に掲載される個々の文章・図形・デザイン、商標・ロゴマーク等（以下「ウェブサイトのデータ等」といいます）に関する著作権その他の権利は、当社または原著作者その他の権利者が有します。</p>
-      <h2>Link Policy</h2>
-      <p>当社Webサイトへのリンクは、原則フリーといたしますので、リンクの可否についてご連絡頂く必要はありません。但し、リンクされている第三者サイトについてTANGERINEはリンクされているサイトおよびリンクしたサイトに対する内容について一切の責任を負いません</p>
       </div>
       <div class="col-md-6">
-      <h3>お問い合わせ</h3>
-      <form class="form-horizontal" role="form">
-        <div class="form-group">
-          <label for="inputName" class="col-lg-3 control-label">名前</label>
-          <div class="col-lg-9">
-            <input type="name" class="form-control" id="inputName" placeholder="例）アロマ花子">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="inputEmail" class="col-lg-3 control-label">メール</label>
-          <div class="col-lg-9">
-            <input type="email" class="form-control" id="inputEmail" placeholder="例）example@mail.com">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="inputDetail" class="col-lg-3 control-label">問い合わせ</label>
-          <div class="col-lg-9">
-            <textarea class="form-control" rows="3" id="inputDetail"></textarea>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-lg-offset-3 col-lg-9">
-            <button type="submit" class="btn btn-default">送信</button>
-          </div>
-        </div>
-      </form>
+      <h2>Link Policy</h2>
+      <p>当社Webサイトへのリンクは、原則フリーといたしますので、リンクの可否についてご連絡頂く必要はありません。但し、リンクされている第三者サイトについてTANGERINEはリンクされているサイトおよびリンクしたサイトに対する内容について一切の責任を負いません</p>
       </div>
     </div>
     </div>
