--- a/static/index.html
+++ b/static/index.html
@@ -470,7 +470,7 @@
       </div>
       <div class="col-md-6">
       <h2>Link Policy</h2>
-      <p>test当社Webサイトへのリンクは、原則フリーといたしますので、リンクの可否についてご連絡頂く必要はありません。但し、リンクされている第三者サイトについてCandleBerryはリンクされているサイトおよびリンクしたサイトに対する内容について一切の責任を負いません</p>
+      <p>当社Webサイトへのリンクは、原則フリーといたしますので、リンクの可否についてご連絡頂く必要はありません。但し、リンクされている第三者サイトについてCandleBerryはリンクされているサイトおよびリンクしたサイトに対する内容について一切の責任を負いません</p>
       </div>
     </div>
     </div>
