Changing images and fix bag

--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2" id="welcome_content">
-          <figure><img src="images/Logojoy___Make_a_Logo_Design_Online.png" alt="" width="200"></figure>
+          <figure><img src="images/Logo2.png" alt="" width="200"></figure>
           <h1></h1>
           <p class="text">エステサロン<br>
             「Candle Berry 高田馬場店」へようこそ。<br>
@@ -293,8 +293,9 @@
       <h1>ネイル</h1>
       <div class="row">
         <div class="col-sm-8">
-          <h2><img src="images/icon_n.svg" alt="">リラックスしながらのネイル</h2>
-          <p>高度な知識と技術で安心のサービスを提供いたします。</p>
+          <h2><img src="images/icon_n.svg" alt="">多彩なネイルコース</h2>
+          <p>多数のサンプルから選ぶ定額コースとやり放題コースをご用意★トレンドネイルをいつでも楽しめる！
+            高度な知識と技術で安心のサービスを提供いたします。</p>
         </div>
       </div>
       <div class="row">
@@ -447,11 +448,11 @@
       </div>
     </section>
 
-    <!-- <p class="footlogo"><img src="images/Logojoy___Make_a_Logo_Design_Online.png" alt=""></p> -->
+    <!-- <p class="footlogo"><img src="images/Logo2.png" alt=""></p> -->
     <div class="row">
       <div class="col-md-2">
         <div class="footlogo">
-        <figure><img src="images/Logojoy___Make_a_Logo_Design_Online.png" alt="" width="200"></figure>
+        <figure><img src="images/Logo2.png" alt="" width="200"></figure>
         </div>
       </div>
     </div>
