favicon css menu changed

--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon_new.ico">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/custom.css" rel="stylesheet" media="screen">
@@ -43,12 +43,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#BODYCARE">BODY CARE</a></li>
-            <li><a href="#TREATMENT">AROMA-TREATMENT</a></li>
-            <li><a href="#FACIAL">FACIAL MASSAGE</a></li>
-            <li><a href="#THERAPIST">MEMO/PROFILE</a></li>
-            <li><a href="#RESERVE">RESERVE</a></li>
-            <li><a href="#ACCESS">ACCESS</a></li>
+            <li><a href="#BODYCARE">リラックス</a></li>
+            <li><a href="#TREATMENT">エステ</a></li>
+            <li><a href="#FACIAL">ネイル</a></li>
+            <li><a href="#THERAPIST">セラピスト</a></li>
+            <!-- <li><a href="#RESERVE">予約</a></li> -->
+            <li><a href="#ACCESS">アクセス</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://www.facebook.com/pages/Salon_Tangerine/1443519525940178" target="_blank" class="icon-facebook"></a></li>
