Del social icons form menu

--- a/static/index.html
+++ b/static/index.html
@@ -50,11 +50,11 @@
             <!-- <li><a href="#RESERVE">予約</a></li> -->
             <li><a href="#ACCESS">アクセス</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <!-- <ul class="nav navbar-nav navbar-right">
             <li><a href="https://www.facebook.com/pages/Salon_Tangerine/1443519525940178" target="_blank" class="icon-facebook"></a></li>
             <li><a href="http://twitter.com/share?url=http://aroma-massage.appspot.com/&text=ツイート内に含める文字&via=ツイート内に含まれるユーザー名&related=関連アカウント" class="icon-twitter"></a></li>
             <li><a href="https://www.google.com/+AromamassageAppspotTangerine" target="_blank" class="icon-google-plus"></a></li>
-          </ul>
+          </ul> -->
         </div><!-- /.navbar-collapse -->
       </div>
     </nav>
