Changed meta datas

--- a/static/index.html
+++ b/static/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>アロママッサージのお店 TANGERINE</title>
-    <meta content="アロマ,アロママッサージ,マッサージ,ダイエット,リラクゼーション,松戸,常磐線,新京成線" name="keywords">
+    <title>エステサロン　Candle berry</title>
+    <meta content="アロマ,アロママッサージ,マッサージ,ダイエット,リラクゼーション,高田馬場,JR,東西線,早稲田,早稲田通り" name="keywords">
     <meta content="エステサロン　「Candle berry 高田馬場店」へようこそ。高田馬場5分★ネイル＆フェイシャル専門店♪21時まで営業だから、家事や仕事で忙しい方も通いやすい◎お肌の悩みも体の疲れもストレスもスッキリ解消♪ネイルは、多数のサンプルから選ぶ定額コースとやり放題コースをご用意" name="description">
-    <meta property="og:title" content="アロママッサージのお店 TANGERINE">
+    <meta property="og:title" content="エステサロン　Candle berry">
     <meta property="og:type" content="salon">
-    <meta property="og:description" content="アロマトリートメントとボディケアのお店「TANGERINE(タンジェリン)」へようこそ。TANGERINEは1日ひと組のお客様をお迎えするプライベートサロンです。お客様ひとりひとりにそれぞれの極上のリラクゼーションをご提供します。">
+    <meta property="og:description" content="エステサロン　「Candle berry 高田馬場店」へようこそ。高田馬場駅徒歩5分のネイル＆フェイシャル専門店。お肌の悩みも体の疲れもストレスもスッキリ♪。">
     <meta property="og:url" content="http://aroma-massage.appspot.com/">
     <meta property="og:image" content="http://aroma-massage.appspot.com/images/ogimage.png">
-    <meta property="og:site_name" content="TANGERINE">
+    <meta property="og:site_name" content="Candle berry">
     <meta property="og:email" content="info@facebookapps.jp">
-    <meta name=”keywords” content=”アロマ,アロママッサージ,マッサージ,ダイエット,リラクゼーション,松戸,常磐線,新京成線”>
-    <meta name=”description” content=”アロマトリートメントとボディケアのお店「TANGERINE(タンジェリン)」へようこそ。TANGERINEは1日ひと組のお客様をお迎えするプライベートサロンです。”>
+    <meta name=”keywords” content=”アロマ,アロママッサージ,マッサージ,ダイエット,リラクゼーション,高田馬場,JR,東西線”>
+    <meta name=”description” content=”エステサロンCandleberry高田馬場店へようこそ。高田馬場駅徒歩5分のネイル＆フェイシャル専門店。お肌の悩みも体の疲れもストレスもスッキリ♪。”>
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72-precomposed.png">
@@ -486,7 +486,7 @@
     <script src="js/jquery.smooth-scroll.js"></script>
     <script src="js/scrollspy.js"></script>
     <script src="js/script.js"></script>
-    <script>
+    <!-- <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -495,6 +495,6 @@
       ga('create', 'UA-60578193-1', 'auto');
       ga('send', 'pageview');
 
-    </script>
+    </script> -->
   </body>
 </html>
