--- a/static/index.html
+++ b/static/index.html
@@ -65,12 +65,15 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2" id="welcome_content">
-          <figure><img src="images/Logo2.png" alt="" width="200"></figure>
-          <h1></h1>
-          <p class="text">エステサロン<br>
-            「Candle Berry 高田馬場店」へようこそ。<br>
-            <p></p>
-            高田馬場駅徒歩5分のネイル＆フェイシャル専門店。お肌の悩みも体の疲れもストレスもスッキリ♪</p>
+          <figure><img src="images/Logo2.png" alt="" width="150"></figure>
+          <h2></h2>
+          <!-- <p class="text">エステサロン<br>
+            <b>Candle Berry</b><br>
+            <p></p> -->
+            高田馬場駅徒歩5分の<br>
+            ネイル＆エステ専門店</br>
+            <!-- お肌の悩みも体の疲れも</br> -->
+            <!-- ストレスもスッキリ♪</p> -->
 
             <p></p>
               <p class="text-center"><a href="https://beauty.hotpepper.jp/kr/slnH000371648/" class="btn btn-lg btn-primary" target="_blank">予約する</a></p>
