--- a/static/index.html
+++ b/static/index.html
@@ -65,18 +65,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2" id="welcome_content">
-          <figure><img src="images/Logo2.png" alt="" width="150"></figure>
+          <figure><img src="images/Logo2.png" alt="" width="250"></figure>
           <h2></h2>
           <!-- <p class="text">エステサロン<br>
             <b>Candle Berry</b><br>
             <p></p> -->
             高田馬場駅徒歩5分の<br>
             ネイル＆エステ専門店</br>
-            <!-- お肌の悩みも体の疲れも</br> -->
-            <!-- ストレスもスッキリ♪</p> -->
-
             <p></p>
-              <p class="text-center"><a href="https://beauty.hotpepper.jp/kr/slnH000371648/" class="btn btn-lg btn-primary" target="_blank">予約する</a></p>
+            お肌の悩みも体の疲れも</br>
+            ストレスもスッキリ♪</p>
+
+            <!-- <p></p>
+              <p class="text-center"><a href="https://beauty.hotpepper.jp/kr/slnH000371648/" class="btn btn-lg btn-primary" target="_blank">予約する</a></p> -->
           <!-- <p class="sns">
           <a href="https://www.facebook.com/pages/Salon_Tangerine/1443519525940178" target="_blank" class="icon-facebook"></a>
           <a href="http://twitter.com/share?url=http://aroma-massage.appspot.com/&text=ツイート内に含める文字&via=ツイート内に含まれるユーザー名&related=関連アカウント" class="icon-twitter"></a>
@@ -182,6 +183,9 @@
           </table>
         </div>
       </div>
+    </section>
+    <section id="RESERVE">
+      <p class="text-center"><a href="https://beauty.hotpepper.jp/kr/slnH000371648/" class="btn btn-lg btn-primary" target="_blank">予約する</a></p>
     </section>
 
     <p class="line"><img src="images/line1.svg" alt=""></p>
@@ -289,6 +293,9 @@
         <!-- </div> -->
       <!-- </div> -->
     </section>
+    <section id="RESERVE">
+      <p class="text-center"><a href="https://beauty.hotpepper.jp/kr/slnH000371648/" class="btn btn-lg btn-primary" target="_blank">予約する</a></p>
+    </section>
 
     <p class="line"><img src="images/line1.svg" alt=""></p>
 
@@ -383,6 +390,10 @@
         </div>
       </div>
     </section>
+    <section id="RESERVE">
+      <p class="text-center"><a href="https://beauty.hotpepper.jp/kr/slnH000371648/" class="btn btn-lg btn-primary" target="_blank">予約する</a></p>
+    </section>
+
 
     <p class="line"><img src="images/line1.svg" alt=""></p>
 
